Trying to fix hover bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ canvas {
     fill: white;
     stroke: #CB272E;
     /* stroke-width: 2px; */
-    fill-opacity: 0.6;
+    fill-opacity: 0.5;
     stroke-opacity: 0.8;
     mix-blend-mode: multiply;
     cursor: default;
